<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobiledevices.bitcoinproducts.BrowseProductsActivity"
    android:orientation="vertical"
    android:background="#c45657">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/nameTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:layout_gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/descriptionTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="end"
            android:text="" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/priceDollarsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

        <TextView
            android:id="@+id/priceDollarsTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:layout_gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/priceBitcoinTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/price_btc"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />

        <TextView
            android:id="@+id/priceBitcoinTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:layout_gravity="end"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Subtitle" />
    </GridLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameTextView"
        android:text="@string/next"
        android:onClick="nextButton"/>

    <Button
        android:id="@+id/prevButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nextButton"
        android:text="@string/prev"
        android:onClick="prevButton"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addButton"
        android:text="@string/delete"
        android:onClick="deleteButton"/>

</LinearLayout>
